updated css to fix links inside of callouts inside of orange bleed

--- a/wp-content/themes/wp-shield/src/assets/scss/shield-patternLibrary/_text.scss
+++ b/wp-content/themes/wp-shield/src/assets/scss/shield-patternLibrary/_text.scss
@@ -579,6 +579,21 @@ a.highlight {
             }
 
         }
+        //If link is in a white card/callout, use default link style
+        .card,
+        .callout {
+            a:not(.button) {
+                color: $orange;
+
+                &:hover {
+                    color: $dark-orange;
+                }
+        }
+        p>a:not(.button) {
+            background-image: linear-gradient($orange-underline, $orange-underline);
+            color: $orange;
+        }
+    }
     }
 
     &.grey,
